--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                 <div>✨<br />✨</div>
               </label>
               <span class="auction-countdown"
-                >Beta auction ends in <br /><span id="auction-timer"></span
+                ><b><u>USA only.</u></b> Beta auction ends in <br /><span
+                  id="auction-timer"
+                ></span
               ></span>
               <input
                 type="email"
