CSS tweaks, removed unneeded script import, verbiage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="landing.css?v=2" />
+    <link rel="stylesheet" href="landing.css" />
   </head>
 
   <body>
@@ -76,7 +76,7 @@
                 for="interested-email"
                 ><div>✨<br />✨</div>
                 <div>
-                  Beta Auction Live<br />
+                  Beta Auction Live!<br />
                   Name Your Price!
                   <small
                     ><a
@@ -136,7 +136,7 @@
         <div class="video-wrap">
           <!-- https://css-tricks.com/lazy-load-embedded-youtube-videos/ -->
           <iframe
-            srcdoc="<style>#tv{background:red;border-radius:50% / 10%;color:#FFF;font-size:2em;height:3em;margin:auto;padding:0;position:absolute;text-align:center;text-indent:.1em;transition:all 150ms ease-out;width:4em;top:0;bottom:0;left:0;right:0;scale:.5}#tv::before{background:inherit;border-radius:5% / 50%;bottom:9%;content:'';left:-5%;position:absolute;right:-5%;top:9%}#tv::after{border-style:solid;border-width:1em 0 1em 1.732em;border-color:transparent transparent transparent rgba(255,255,255,.75);content:' ';font-size:.75em;height:0;margin:-1em 0 0 -.75em;top:50%;position:absolute;width:0}img{position:absolute;width:100%}#wrap{position:absolute;top:0;left:0;bottom:0;right:0;width:100%;overflow:hidden}</style><div id=wrap><a href=https://www.youtube.com/embed/4rDczKkEeYA?autoplay=1><img src=/media/images/social-media-share.jpg alt='The Edgeguard Adapter - Play Switch Games with a Keyboard (Kickstarter Video)'><div id='tv'></div></a></div>"
+            srcdoc="<style>#tv{background:red;border-radius:50% / 10%;color:#FFF;font-size:2em;height:3em;margin:auto;padding:0;position:absolute;text-align:center;text-indent:.1em;transition:all 150ms ease-out;width:4em;top:0;bottom:0;left:0;right:0;scale:.5}#tv::before{background:inherit;border-radius:5% / 50%;bottom:9%;content:'';left:-5%;position:absolute;right:-5%;top:9%}#tv::after{border-style:solid;border-width:1em 0 1em 1.732em;border-color:transparent transparent transparent white;content:' ';font-size:.75em;height:0;margin:-1em 0 0 -.75em;top:50%;position:absolute;width:0}img{position:absolute;width:100%}#wrap{position:absolute;top:0;left:0;bottom:0;right:0;width:100%;overflow:hidden}</style><div id=wrap><a href=https://www.youtube.com/embed/4rDczKkEeYA?autoplay=1><img src=/media/images/social-media-share.jpg alt='The Edgeguard Adapter - Play Switch Games with a Keyboard (Kickstarter Video)'><div id='tv'></div></a></div>"
             loading="lazy"
             title="The Edgeguard Adapter - Play Switch Games with a Keyboard (Kickstarter Video)"
             class="kickstarter-video"
@@ -248,6 +248,5 @@
 
     <!-- My App JS -->
     <script type="module" defer src="js/auction.js"></script>
-    <script type="module" defer src="js/firebase.js"></script>
   </body>
 </html>
