Added mp4 vided and renamed them

--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
         </div>
         <div class="videos">
           <video autoplay loop playsinline muted id="demo-video">
-            <source src="./media/videos/ZxjAmMl.webm" type="video/webm" />
+            <source
+              src="./media/videos/smash-demo.vp9.webm"
+              type="video/webm"
+            />
+            <source src="./media/videos/smash-demo.x264.mp4" type="video/mp4" />
           </video>
           <div class="subscribe">
             <form id="email-form" name="email-form" class="email-form">
