Send people to the Discord after bidding!

--- a/index.html
+++ b/index.html
@@ -125,10 +125,16 @@
               />
             </form>
             <div id="thank-you" class="thank-you hidden">
-              <strong
-                >We got your bid for $<span id="bid-price"></span>! Check your
-                email in a few days to see if you're a winner!<br />😁</strong
-              >
+              <p>
+                We got your bid for $<span id="bid-price"></span>! Check your
+                email in a few days to see if you're a winner! 😁
+              </p>
+
+              <p>
+                Now
+                <a href="https://discord.gg/fgHmrHp">join the Discord</a> for
+                frequent updates!
+              </p>
             </div>
           </div>
         </div>
