Change placeholder to stop coolname@gmail.com spam

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                 name="interested-email"
                 id="interested-email"
                 class="interested-input"
-                placeholder="coolname@gmail.com"
+                placeholder="Email"
+                title="Email"
               />
               <input
                 type="number"
