Price input title

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                 placeholder="$0"
                 min="0"
                 max="900"
+                title="Price"
               />
               <input
                 class="interested-submit"
