Webp images and deleted unneeded images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:url" content="https://keyboard.gg/" />
     <meta
       property="og:image"
-      content="https://keyboard.gg/media/images/social-media-share.jpg"
+      content="https://keyboard.gg/media/images/social-media-share.webp"
     />
     <meta
       name="twitter:image:alt"
@@ -75,7 +75,7 @@
               width="422"
               height="91"
               class="logo"
-              src="media/images/logo.png"
+              src="media/images/logo.webp"
               alt="keyboard.gg Logo"
             />
           </div>
@@ -168,7 +168,7 @@
         <div class="video-wrap">
           <!-- https://css-tricks.com/lazy-load-embedded-youtube-videos/ -->
           <iframe
-            srcdoc="<style>#tv{background:red;border-radius:50% / 10%;color:#FFF;font-size:2em;height:3em;margin:auto;padding:0;position:absolute;text-align:center;text-indent:.1em;transition:all 150ms ease-out;width:4em;top:0;bottom:0;left:0;right:0;scale:.5}#tv::before{background:inherit;border-radius:5% / 50%;bottom:9%;content:'';left:-5%;position:absolute;right:-5%;top:9%}#tv::after{border-style:solid;border-width:1em 0 1em 1.732em;border-color:transparent transparent transparent white;content:' ';font-size:.75em;height:0;margin:-1em 0 0 -.75em;top:50%;position:absolute;width:0}img{position:absolute;width:100%}#wrap{position:absolute;top:0;left:0;bottom:0;right:0;width:100%;overflow:hidden}</style><div id=wrap><a href=https://www.youtube.com/embed/4rDczKkEeYA?autoplay=1><img src=/media/images/social-media-share.jpg alt='The Edgeguard Adapter - Play Switch Games with a Keyboard (Kickstarter Video)'><div id='tv'></div></a></div>"
+            srcdoc="<style>#tv{background:red;border-radius:50% / 10%;color:#FFF;font-size:2em;height:3em;margin:auto;padding:0;position:absolute;text-align:center;text-indent:.1em;transition:all 150ms ease-out;width:4em;top:0;bottom:0;left:0;right:0;scale:.5}#tv::before{background:inherit;border-radius:5% / 50%;bottom:9%;content:'';left:-5%;position:absolute;right:-5%;top:9%}#tv::after{border-style:solid;border-width:1em 0 1em 1.732em;border-color:transparent transparent transparent white;content:' ';font-size:.75em;height:0;margin:-1em 0 0 -.75em;top:50%;position:absolute;width:0}img{position:absolute;width:100%}#wrap{position:absolute;top:0;left:0;bottom:0;right:0;width:100%;overflow:hidden}</style><div id=wrap><a href=https://www.youtube.com/embed/4rDczKkEeYA?autoplay=1><img src=/media/images/social-media-share.webp alt='The Edgeguard Adapter - Play Switch Games with a Keyboard (Kickstarter Video)'><div id='tv'></div></a></div>"
             loading="lazy"
             title="The Edgeguard Adapter - Play Switch Games with a Keyboard (Kickstarter Video)"
             class="kickstarter-video"
@@ -213,7 +213,7 @@
               loading="lazy"
               width="180"
               height="206"
-              src="media/images/social/discord.png"
+              src="media/images/social/discord.webp"
               alt="Discord"
               title="Discord"
             />
@@ -227,7 +227,7 @@
               loading="lazy"
               width="180"
               height="180"
-              src="media/images/social/twitter.png"
+              src="media/images/social/twitter.webp"
               alt="Twitter"
               title="Twitter"
             />
@@ -241,7 +241,7 @@
               loading="lazy"
               width="180"
               height="126"
-              src="media/images/social/youtube.png"
+              src="media/images/social/youtube.webp"
               alt="YouTube"
               title="YouTube"
             />
@@ -255,7 +255,7 @@
               loading="lazy"
               width="180"
               height="180"
-              src="media/images/social/facebook.png"
+              src="media/images/social/facebook.webp"
               alt="Facebook"
               title="Facebook"
             />
@@ -269,7 +269,7 @@
               loading="lazy"
               width="180"
               height="180"
-              src="media/images/social/instagram.png"
+              src="media/images/social/instagram.webp"
               alt="Instagram"
               title="Instagram"
             />
