--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="landing.css" />
+    <link rel="stylesheet" href="styles/landing.css" />
 
     <!-- Twitter conversion tracking base code -->
     <script>
