Added favicons and site manifest

--- a/index.html
+++ b/index.html
@@ -43,6 +43,25 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/landing.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/media/images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/media/images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/media/images/favicon-16x16.png"
+    />
+    <link rel="icon" href="/media/images/favicon.ico" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Twitter conversion tracking base code -->
     <script>
