--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div>✨<br />✨</div>
               </label>
               <p class="auction-countdown">
-                <b>Winners will be emailed!</b> (<em>Check your spam!</em>
+                <b>Check your email soon!</b> (<em>Even your spam!</em>
                 🐷)<br /><b>Get notified about future sales:</b>
               </p>
               <input type="hidden" name="nonce" />
