--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 id="interested-submit"
                 id="interested-submit"
                 type="submit"
-                value="Notify Me!"
+                value="Tell me when it's in stock!"
               />
             </form>
             <div id="thank-you" class="thank-you hidden">
