keyboard.gg manual

--- a/manual/index.html
+++ b/manual/index.html
@@ -3,16 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Redirecting to keyboard.gg's Manual</title>
-    <meta
-      http-equiv="refresh"
-      content="0; URL=https://www.youtube.com/@DanielKaspo"
-    />
-    <link rel="canonical" href="https://www.youtube.com/@DanielKaspo" />
+    <meta http-equiv="refresh" content="0; URL=https://youtu.be/o7j70ty_f4I" />
+    <link rel="canonical" href="https://youtu.be/o7j70ty_f4I" />
   </head>
   <body>
     <p>
       Redirecting to
-      <a href="https://www.youtube.com/@DanielKaspo">keyboard.gg's Manual</a>.
+      <a href="https://youtu.be/o7j70ty_f4I">keyboard.gg's Manual</a>.
     </p>
   </body>
 </html>
