Text update around email signup

--- a/index.html
+++ b/index.html
@@ -118,13 +118,14 @@
                 id="interested-email-label"
                 for="interested-email"
                 ><div>✨<br />✨</div>
-                <div>Beta Sale Finished!</div>
+                <div>
+                  <h2>Beta Sale Finished!<br />Stock Drop Notifications:</h2>
+                </div>
                 <div>✨<br />✨</div>
               </label>
-              <p class="auction-countdown">
-                <b>Check your email soon!</b> (<em>Even your spam!</em>
-                🐷)<br /><b>Get notified about future sales:</b>
-              </p>
+              <!-- <p class="auction-countdown">
+                <b>Get notified about future sales:</b>
+              </p> -->
               <input type="hidden" name="nonce" />
               <input
                 type="email"
