--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
         <div class="videos">
           <video autoplay loop playsinline muted id="demo-video">
             <source
+              src="./media/videos/smash-demo.av1.webm"
+              type="video/webm; codecs=av01.0.04M.08"
+            />
+            <source
+              src="./media/videos/smash-demo.av1.mp4"
+              type="video/mp4; codecs=av01.0.04M.08"
+            />
+            <source
               src="./media/videos/smash-demo.vp9.webm"
               type="video/webm"
             />
