Update some tournament verbiage

--- a/tournament/index.html
+++ b/tournament/index.html
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="Tournament Legality - keyboard.gg" />
     <meta
       property="og:title"
-      content="Our promise is to make sure the Edgeguard a fast and legal keyboard option."
+      content="Our promise is to make sure the Edgeguard is a legal keyboard option."
     />
     <meta property="og:type" content="website" />
     <meta
