Add Buy it Now button

--- a/index.html
+++ b/index.html
@@ -127,20 +127,18 @@
               id="buy-it-now"
               >Buy It Now! $169</a
             >
+            <p>
+              (Intl: customs/taxes apply. Adapter
+              <a href="/#beta">still in beta.</a>)
+            </p>
+            <!-- <div class="sold-out">Sold Out ☹️</div> -->
             <form id="email-form" name="email-form" class="email-form">
               <label
                 class="interested-label"
                 id="interested-email-label"
                 for="interested-email"
               >
-                <div>
-                  <h2>
-                    Out of your price range?<br /><small
-                      >Put your email &amp; price below, we'll notify you if it
-                      drops</small
-                    >
-                  </h2>
-                </div>
+                <h2>Want big updates &amp; stock notifications?</h2>
               </label>
               <!-- <p class="auction-countdown">
                 <b>Get notified about future sales:</b>
@@ -156,7 +154,7 @@
                 placeholder="Email"
                 title="Email"
               />
-              <input
+              <!-- <input
                 type="number"
                 required
                 autocomplete="price"
@@ -167,13 +165,13 @@
                 min="10"
                 max="900"
                 title="Price"
-              />
+              /> -->
               <input
                 class="interested-submit"
                 id="interested-submit"
                 id="interested-submit"
                 type="submit"
-                value="Tell me if price drops!"
+                value="Keep me in the loop!"
               />
             </form>
             <div id="thank-you" class="thank-you hidden">
@@ -183,7 +181,7 @@
               </p>
               <p>
                 Now
-                <a href="https://discord.gg/fgHmrHp" target="_blank"
+                <a href="https://keyboard.gg/discord" target="_blank"
                   >join the Discord</a
                 >
                 for updates!
@@ -235,13 +233,16 @@
         <small>*Excludes motion control games.</small>
       </section>
 
-      <section class="beta">
+      <section class="beta" name="beta" id="beta">
         <h1>🚧 Pardon our Dust! We're still in beta! 🚧</h1>
-        <p>A few things are limited in beta right now, the main ones being:</p>
+        <p>
+          A few things are limited and being worked on in beta right now, the
+          main ones being:
+        </p>
         <ul>
           <li>
-            Configuration software is bare-bones and <em>WAY</em> more
-            complicated than it should be. (See
+            The configuration software is bare-bones and not where we want it.
+            (See
             <a
               target="_blank"
               href="https://www.youtube.com/watch?v=o7j70ty_f4I"
@@ -253,9 +254,9 @@
       </section>
 
       <section class="socials">
-        <h1>Follow our adventure! (Plus DEALS!) 🏃‍♀️🏃‍♂️</h1>
+        <h1>🏃‍♀️ Follow our adventure! 🏃‍♂️</h1>
         <div class="icons">
-          <a href="https://discord.gg/fgHmrHp" target="_blank" rel="noopener">
+          <a href="https://keyboard.gg/discord/" target="_blank">
             <img
               loading="lazy"
               width="180"
@@ -265,11 +266,7 @@
               title="Discord"
             />
           </a>
-          <a
-            href="https://www.tiktok.com/@danielkaspo"
-            target="_blank"
-            rel="noopener"
-          >
+          <a href="https://www.tiktok.com/@danielkaspo" target="_blank">
             <img
               loading="lazy"
               width="180"
@@ -279,11 +276,7 @@
               title="TikTok"
             />
           </a>
-          <a
-            href="https://twitter.com/danielkaspo"
-            target="_blank"
-            rel="noopener"
-          >
+          <a href="https://twitter.com/danielkaspo" target="_blank">
             <img
               loading="lazy"
               width="180"
@@ -293,11 +286,7 @@
               title="Twitter"
             />
           </a>
-          <a
-            href="https://www.youtube.com/c/DanielKaspo"
-            target="_blank"
-            rel="noopener"
-          >
+          <a href="https://www.youtube.com/c/DanielKaspo" target="_blank">
             <img
               loading="lazy"
               width="180"
@@ -307,11 +296,7 @@
               title="YouTube"
             />
           </a>
-          <a
-            href="https://www.facebook.com/keyboard.gg/"
-            target="_blank"
-            rel="noopener"
-          >
+          <a href="https://www.facebook.com/keyboard.gg/" target="_blank">
             <img
               loading="lazy"
               width="180"
@@ -321,11 +306,7 @@
               title="Facebook"
             />
           </a>
-          <a
-            href="https://www.instagram.com/keyboard.gg/"
-            target="_blank"
-            rel="noopener"
-          >
+          <a href="https://www.instagram.com/keyboard.gg/" target="_blank">
             <img
               loading="lazy"
               width="180"
